<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/wieght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="@+id/weight_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/weight_edit"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter weight"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/wieght"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wieght" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioButton_male"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/weight_edit">

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_male" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_female" />
    </RadioGroup>

    <Button
        android:id="@+id/set_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/set_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_weight" />

    <TextView
        android:id="@+id/view_weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_weight_text"
        app:layout_constraintStart_toEndOf="@+id/view_weight"
        app:layout_constraintTop_toBottomOf="@+id/set_weight" />

    <TextView
        android:id="@+id/alcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/alcohol"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_weight" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/alcohol1oz"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/alcohol"
        app:layout_constraintTop_toBottomOf="@+id/view_weight_text">

        <RadioButton
            android:id="@+id/alcohol1oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcohol1oz" />

        <RadioButton
            android:id="@+id/alcohol5oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcohol5oz" />

        <RadioButton
            android:id="@+id/alcohol12oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcohol12oz" />
    </RadioGroup>

    <TextView
        android:id="@+id/alcohol_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/alcohol_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alcohol" />

    <SeekBar
        android:id="@+id/seekBar_alcohol_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:max="30"
        android:progress="12"
        app:layout_constraintBottom_toBottomOf="@+id/alcohol_level"
        app:layout_constraintEnd_toStartOf="@+id/default_level"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/alcohol_level"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alcohol_level" />

    <Button
        android:id="@+id/add"
        android:layout_width="0150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_alcohol_level" />

    <TextView
        android:id="@+id/default_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/default_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/no_drinks"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/no_drinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/BAC_level"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/BAC_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_drinks" />

    <TextView
        android:id="@+id/your_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_status"
        app:layout_constraintEnd_toStartOf="@+id/your_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BAC_level" />

    <View
        android:id="@+id/your_view"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BAC_level" />

    <TextView
        android:id="@+id/your_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_limit"
        app:layout_constraintBottom_toBottomOf="@+id/your_view"
        app:layout_constraintEnd_toEndOf="@+id/your_view"
        app:layout_constraintStart_toStartOf="@+id/your_view"
        app:layout_constraintTop_toTopOf="@+id/your_view" />

</androidx.constraintlayout.widget.ConstraintLayout>